Fixed alignments

--- a/styles/Hero.module.scss
+++ b/styles/Hero.module.scss
@@ -40,9 +40,11 @@
             }
         }
     }
-    .ctaContainer{
-        padding: 0;
+    .ctaContainer {
         position: absolute;
+        top: 36%;
+        transform: translateY(-50%);
+        padding: 0;
         right: 0;
         display: flex;
         flex-direction: column;
@@ -52,25 +54,26 @@
     .container {
         flex-direction: column;
         justify-content: space-evenly;
-        .textWrapper {
+        .textAndNav {
             max-width: 90%;
             .title,
             .description {
                 text-align: center;
             }
-            .title{
+            .title {
                 margin-bottom: 2vh;
             }
-            .description:last-of-type{
+            .description:last-of-type {
                 margin-bottom: 7vh;
             }
         }
-        .ctaContainer{
+        .ctaContainer {
             position: relative;
             width: 100%;
             height: 100%;
             align-items: center;
             justify-content: center;
+            transform: none;
         }
     }
 }
