--- a/styles/Navbar.module.scss
+++ b/styles/Navbar.module.scss
@@ -8,4 +8,8 @@
         align-items: center;
         justify-content: space-between;
     }
+
+    @media (max-width: 992px){
+      display: none;
+    }
 }
